--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Raycasting engine",
   "main": "index.js",
   "scripts": {
-    "build": "webpack build",
+    "dev": "webpack build --mode development",
+    "build": "webpack build --mode production",
     "watch": "webpack --watch",
     "format": "prettier --write src/**/*.ts"
   },
